# Simple_Text_Editor

./: .pre-commit-config.yaml  A Simple Notepad.py  CHANGELOG.md  Makefile  Notepad Using Python-v1.1.py  README.md  SUGGESTED_COMMIT_AND_PR.txt  pyproject.toml  tkeditor.spec
.github/workflows/: ci.yml
tests/: test_app_start.py  test_io.py
tkeditor/: __init__.py  __main__.py  app.py  config.py  io.py  logging.py
tkeditor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tkeditor/ui/: encoding_dialog.py  find_replace.py  window_utils.py
