[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tkeditor"
version = "0.1.0"
description = "A lightweight Tkinter text editor with autosave, recovery, and modern tooling."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Your Name" }]
keywords = ["tkinter", "text-editor", "desktop"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "mypy>=1.8",
  "black>=24.4",
  "ruff>=0.6",
  "isort>=5.13",
  "pre-commit>=3.6",
  "pyinstaller>=6.3",
]

[project.scripts]
tkeditor = "tkeditor.app:main"

[tool.setuptools]
packages = ["tkeditor", "tkeditor.ui"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[tool.pytest.ini_options]
addopts = "-q"
